add input forms and button to index.html.

--- a/index.html
+++ b/index.html
@@ -13,6 +13,24 @@
   <div class="container">
     <div>
       <h1>Patty's Pizza</h1>
+      <p>Select a silly simple pizza and a super specific size! We will slap it together for you and you won't believe your eyes! *All pizzas start at $12. Patty's Pizza is not resposnible for poor decision making when it comes to topping selections. </p>
+      <form id="form">
+        <label for="toppings">Pick a Pizza</label>
+        <select class="form-control" id="toppings">
+          <option value="parsley">Parsley Paradise</option>
+          <option value="pickle">Pickle Pizazz</option>
+          <option value="pansy">Pansy and pumpernickel</option>
+          <option value="pb">Peanut Butter Parfait</option>
+        </select>
+        <label for="size">Select a Size</label>
+        <select class="form-control" id="size">
+          <option value="small">Simply Small</option>
+          <option value="med">Moderately Medium</option>
+          <option value="large">Lovely Large</option>
+          <option value="xl">Excellently XL</option>
+        </select>
+        <button type="submit" class="btn btn-dark">Pick your Poison//Process your Price</button>
+      </form>
     </div>
   </div>
 </body>
