add price to menu for size.

--- a/index.html
+++ b/index.html
@@ -25,9 +25,9 @@
         <label for="size">Select a Size</label>
         <select class="form-control" id="size">
           <option value="small">Simply Small</option>
-          <option value="med">Moderately Medium</option>
-          <option value="large">Lovely Large</option>
-          <option value="xl">Excellently XL</option>
+          <option value="med">Moderately Medium: Add $1</option>
+          <option value="large">Lovely Large: Add $2</option>
+          <option value="xl">Excellently XL: Add $3</option>
         </select>
         <button type="submit" class="btn btn-dark">Pick your Poison//Process your Price</button>
       </form>
