add pieAndSize prototype.

--- a/index.html
+++ b/index.html
@@ -17,10 +17,10 @@
       <form id="form" class="form-group">
         <label for="toppings">Pick a Pie</label>
         <select class="form-control" id="toppings">
-          <option value="parsley">Parsley Paradise</option>
-          <option value="pickle">Pickle Pizazz</option>
-          <option value="pansy">Pansy and pumpernickel</option>
-          <option value="pb">Peanut Butter Parfait</option>
+          <option value="Parsley Paradise">Parsley Paradise</option>
+          <option value="Pickle Pizazz">Pickle Pizazz</option>
+          <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
+          <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
         </select>
         <label for="size">Select a Size</label>
         <select class="form-control" id="size">
@@ -34,7 +34,7 @@
     </div>
     <div id="order">
       <h3>Your pizza pickin' price is... </h3>
-      <Span></Span>
+      <Span id="pizzaTotal"></Span>
       <h3>Pop on by and grab it 20 so it stays pipin' hot!</h3>
       <h6> DISCLAIMER *All pizzas start at $12. Patty's Pizza is not resposnible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </h6>
     </div>
