add css stylings.

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 </head>
 <body>
   <div class="container">
-    <div>
+    <div class="box">
       <h1>Patty's Pizza</h1>
       <p>Select a silly simple pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</p> 
       <form id="form" class="form-group">
