add css stylings

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="css/bootstrap.css" type="text/css">
   <link rel="stylesheet" href="css/styles.css" type="text/css">
+  <link href="https://fonts.googleapis.com/css?family=Bangers|Schoolbell&display=swap" rel="stylesheet">
   <script src="js/jquery-3.4.1.js"></script>
   <script src="js/scripts.js"></script>
   <title>Pizza Parlor</title>
@@ -12,31 +13,35 @@
 <body>
   <div class="container">
     <div class="box">
-      <h1>Patty's Pizza</h1>
-      <p>Select a silly simple pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</p> 
-      <form id="form" class="form-group">
-        <label for="toppings">Pick a Pie</label>
-        <select class="form-control" id="toppings">
-          <option value="Parsley Paradise">Parsley Paradise</option>
-          <option value="Pickle Pizazz">Pickle Pizazz</option>
-          <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
-          <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
-        </select>
-        <label for="size">Select a Size</label>
-        <select class="form-control" id="size">
-          <option value="small">Simply Small</option>
-          <option value="med">Moderately Medium: Add $1</option>
-          <option value="large">Lovely Large: Add $2</option>
-          <option value="xl">Excellently XL: Add $3</option>
-        </select>
-        <button type="submit" class="btn btn-dark">Pick your Poison//Process your Price</button>
+      <h1>Patty's Pizza Parlor</h1>
+      <h3>Select wild and wacky pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</h3> 
+      <form id="form">
+        <div class="form-group">
+          <label for="toppings">Pick a Pie</label>
+          <select  id="toppings">
+            <option selected>Choo Choo Choose...</option>
+            <option value="Parsley Paradise">Parsley Paradise</option>
+            <option value="Pickle Pizazz">Pickle Pizazz</option>
+            <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
+            <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
+          </select>
+          <label for="size">Select a Size: All pizzas start at $12.</label>
+          <select  id="size">
+            <option selected>Choo Choo Choose...</option>
+            <option value="small">Simply Small</option>
+            <option value="med">Moderately Medium: Add $1</option>
+            <option value="large">Lovely Large: Add $2</option>
+            <option value="xl">Excellently XL: Add $3</option>
+          </select>
+        </div>
+        <button type="submit">Pick your Poison//Process your Price</button>
       </form>
     </div>
     <div id="order">
-      <h3>Your pizza pickin' price is... </h3>
-      <Span id="pizzaTotal"></Span>
+      
+      <h3><Span id="pizzaTotal"></Span></h3>
       <h3>Pop on by and grab it 20 so it stays pipin' hot!</h3>
-      <h6> DISCLAIMER *All pizzas start at $12. Patty's Pizza is not resposnible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </h6>
+      <p>!!!!!DISCLAIMER!!!!! *Patty's Pizza is not responsible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </p>
     </div>
   </div>
 </body>
