update css styles.

--- a/index.html
+++ b/index.html
@@ -12,36 +12,38 @@
 </head>
 <body>
   <div class="container">
-    <div class="box">
-      <h1>Patty's Pizza Parlor</h1>
-      <h3>Select wild and wacky pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</h3> 
-      <form id="form">
-        <div class="form-group">
-          <label for="toppings">Pick a Pie</label>
-          <select  id="toppings">
-            <option selected>Choo Choo Choose...</option>
-            <option value="Parsley Paradise">Parsley Paradise</option>
-            <option value="Pickle Pizazz">Pickle Pizazz</option>
-            <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
-            <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
-          </select>
-          <label for="size">Select a Size: All pizzas start at $12.</label>
-          <select  id="size">
-            <option selected>Choo Choo Choose...</option>
-            <option value="small">Simply Small</option>
-            <option value="med">Moderately Medium: Add $1</option>
-            <option value="large">Lovely Large: Add $2</option>
-            <option value="xl">Excellently XL: Add $3</option>
-          </select>
-        </div>
-        <button type="submit">Pick your Poison//Process your Price</button>
-      </form>
-    </div>
-    <div id="order">
-      
-      <h3><Span id="pizzaTotal"></Span></h3>
-      <h3>Pop on by and grab it 20 so it stays pipin' hot!</h3>
-      <p>!!!!!DISCLAIMER!!!!! *Patty's Pizza is not responsible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </p>
+    <div class="box1">
+      <div class="box">
+        <h1>Patty's Pizza Parlor</h1>
+        <h3>Select wildly wacky pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</h3> 
+        <form id="form">
+          <div class="form-group">
+            <label for="toppings">Pick a Pie</label>
+            <select class="form-control" id="toppings">
+              <option selected>Choo Choo Choose...</option>
+              <option value="Parsley Paradise">Parsley Paradise</option>
+              <option value="Pickle Pizazz">Pickle Pizazz</option>
+              <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
+              <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
+            </select>
+            <label for="size">Select a Size: All pizzas start at $12.</label>
+            <select class="form-control" id="size">
+              <option selected>Choo Choo Choose...</option>
+              <option value="small">Simply Small</option>
+              <option value="med">Moderately Medium: Add $1</option>
+              <option value="large">Lovely Large: Add $2</option>
+              <option value="xl">Excellently XL: Add $3</option>
+            </select>
+          </div>
+          <button type="submit">Pick your Poison//Process your Price</button>
+        </form>
+      </div>
+      <div id="order">
+        <h3><Span id="pizzaTotal"></Span></h3>
+        <h3>Pop on by and grab it 20 so it stays pipin' hot!</h3>
+        <p>!!!!!DISCLAIMER!!!!! *Patty's Pizza is not responsible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </p>
+      </div>
+       <footer> <a href="https://github.com/Jozypants">Jozy Kinnaman</a> (c) 2020</footer>
     </div>
   </div>
 </body>
