update js functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
     <div class="box1">
       <div class="box">
         <h1>Patty's Pizza Parlor</h1>
-        <h3>Select wildly wacky pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</h3> 
+        <h3>Select a wildly wacky pizza and a super specific size! We will slap it together in a jiffy and you won't believe your eyes!</h3> 
         <form id="form">
           <div class="form-group">
             <label for="toppings">Pick a Pie</label>
@@ -25,6 +25,14 @@
               <option value="Pickle Pizazz">Pickle Pizazz</option>
               <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
               <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
+            </select>
+            <label for="toppings">Tag on a topper! Add $0.50!</label>
+            <select class="form-control" id="addTop">
+              <option value="none">none</option>
+              <option value="Pineapple">Pineapple</option>
+              <option value="Pop Corn">Pop Corn</option>
+              <option value="Pastrami">Pastrami</option>
+              <option value="Pop Rocks">Pop Rocks</option>
             </select>
             <label for="size">Select a Size: All pizzas start at $12.</label>
             <select class="form-control" id="size">
@@ -40,7 +48,7 @@
       </div>
       <div id="order">
         <h3><Span id="pizzaTotal"></Span></h3>
-        <h3>Pop on by and grab it 20 so it stays pipin' hot!</h3>
+        <h3>Pop on by and grab it in 20 so it stays pipin' hot!</h3>
         <p>!!!!!DISCLAIMER!!!!! *Patty's Pizza is not responsible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </p>
       </div>
        <footer> <a href="https://github.com/Jozypants">Jozy Kinnaman</a> (c) 2020</footer>
