--- a/index.html
+++ b/index.html
@@ -20,13 +20,12 @@
           <div class="form-group">
             <label for="toppings">Pick a Pie</label>
             <select class="form-control" id="toppings">
-              <option selected>Choo Choo Choose...</option>
               <option value="Parsley Paradise">Parsley Paradise</option>
               <option value="Pickle Pizazz">Pickle Pizazz</option>
               <option value="Pansy and Pumpernickel">Pansy and Pumpernickel</option>
               <option value="Peanut Butter Parfait">Peanut Butter Parfait</option>
             </select>
-            <label for="toppings">Tag on a topper! Add $0.50!</label>
+            <label for="toppers">Tag on a topper! Add $0.50!</label>
             <select class="form-control" id="addTop">
               <option value="none">none</option>
               <option value="Pineapple">Pineapple</option>
@@ -36,11 +35,10 @@
             </select>
             <label for="size">Select a Size: All pizzas start at $12.</label>
             <select class="form-control" id="size">
-              <option selected>Choo Choo Choose...</option>
               <option value="small">Simply Small</option>
               <option value="med">Moderately Medium: Add $1</option>
               <option value="large">Lovely Large: Add $2</option>
-              <option value="xl">Excellently XL: Add $3</option>
+              <option value="xl">EXTREME XL: Add $3</option>
             </select>
           </div>
           <button type="submit">Pick your Poison//Process your Price</button>
@@ -48,7 +46,11 @@
       </div>
       <div id="order">
         <h3><Span id="pizzaTotal"></Span></h3>
-        <h3>Pop on by and grab it in 20 so it stays pipin' hot!</h3>
+        <br>
+        <h3><Span id="toppers"></Span></h3>
+        <br>
+        <h3>Stop on by and grab it in 20 min or so and enjoy it pipin' hot!</h3>
+        <br>
         <p>!!!!!DISCLAIMER!!!!! *Patty's Pizza is not responsible for poor decision making when it comes to topping selections and cannot be held responsible for any GI related incidences that may occur. </p>
       </div>
        <footer> <a href="https://github.com/Jozypants">Jozy Kinnaman</a> (c) 2020</footer>
